========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-05-24

  - Implemented beancount.plugins.auto and beancount.plugins.pedantic. I've been
    wanting to do this for a while. When writing quick-and-dirty little tests,
    inserting 'plugin "beancount.plugins.auto"' is quick and does the job, and
    if you want absolutely all the verifications and to make Beancount as
    pedantic as possible, you should be able to adopt 'plugin
    "beancount.plugins.pedantic"'.

    In order to do that I had to make the loader support plugin definitions
    whose __plugins__ attribute is a function reference, not just a string. It
    supports both now.

  - A number like this now fails to parse: 1,245,449,72.00 USD. I added a test
    in the lexer to tighten the parser. This has been brought up before and will
    potentially avoid input errors.


2017-05-20

  - Clarified error message for price format specified on the command-line.


2017-05-08

  - Made the open/close map return by the getters not a defaultdict by default,
    so that accidentally looking up elements won't mutate it.


2017-04-30

  - Moved src/python/beancount/... to beancount/...
    The purpose is to structure this project in the most common way
    people expect it (most Python OSS projects have this structure, with the
    package name directory at the root). I've had this other structure for a
    while mainly for historical reasons. I wanted to make this clean before
    baking a final 2.0 release and switching to numbered releases.

  - Moved src/elisp/beancount.el to editors/emacs/beancount.el and made
    necessary adjustments.

  - Merged incomplete changes from booking branch to "default." The work on
    supporting self-reduction (see
    http://furius.ca/benacount/doc/self-reductions) won't be carried during 2.0,
    it will be subject of a subsequent release.
